# SmartRobotics_Project

./: camera_script.py  commands.txt  frames.gv  publisher_mqtt.py  requirements.txt  requirements_fabri.txt  ros_ai_publisher.py  subscriber_mqtt.py  yolo_test.py
AI_Detection/: detect_faces.py  yolo_face_test.py
robot/: CMakeLists.txt  commands.txt  invers_k.py  package.xml  setup.cfg
robot/config/: robot.yaml
robot/description/: colours.xacro  gazebo_control.xacro  gazebo_lidar.xacro  robot.urdf.xacro  robot_arm.urdf  robot_arm.xacro  robot_lidar.xacro  target.xacro
robot/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
robot/install/robot/share/robot/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
robot/install/robot/share/robot/cmake/: robotConfig-version.cmake  robotConfig.cmake
robot/install/robot/share/robot/config/: drive_bot.rviz  empty.yaml  robot.yaml  view_bot.rviz
robot/install/robot/share/robot/description/: colours.xacro  gazebo_control.xacro  gazebo_lidar.xacro  inertial_macros.xacro  robot.urdf.xacro  robot_arm.urdf  robot_arm.xacro  robot_arm.xacro.old  robot_base.xacro  robot_base.xacro.txt  robot_core.xacro  robot_lidar.xacro  target.xacro
robot/install/robot/share/robot/environment/: ament_prefix_path.dsv  path.dsv
robot/install/robot/share/robot/launch/: arm_move.launch.py  arm_move_launch.py  launch_copied.py  launch_sim.launch.py  rsp.launch.py
robot/install/robot/share/robot/scripts/: move_arm.py
robot/launch/: arm_move.launch.py  launch_sim.launch.py
robot/log/: latest_build
robot/scripts/: move_arm  move_arm.py
robot/scripts/install/: local_setup.sh  setup.sh
robot/scripts/log/: latest_build
robot/worlds/: column.world  ctable.world  empty.world  empty.world.old  empty.world.zero  htable.world  my_world.sdf
(+194 files in other folders)
